<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/label_is"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_at"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_twitter_name_1"
            android:inputType="text"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/label_following"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView02"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_at"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/EditText02"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_twitter_name_2"
            android:inputType="text"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/label_question_mark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="240sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView03"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/button_title_check"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ResultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button01"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false" />

</RelativeLayout>